Fix footer spacing and odin image resizing

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 .logoFooter {
     position: absolute;
     bottom: 1%;
-    left: 4.5vw;
+    left: 6vw;
     color: rgb(218, 218, 218);
     font-size: 1vw;
     text-align: center;
@@ -65,7 +65,7 @@ a {
 }
 
 .odinImage {
-    height: 10vh;
+    height: 7vw;
 }
 
 .formContainer {
